force-app/src/objects/TR1__Advanced_Search_Picklists_Config__mdt.object
<CustomObject>
    <description>Allows to add Contact dependent picklists to Advanced search filter on Search and Match page</description>
    <fields>
        <fullName>TR1__Controlling_Field__c</fullName>
        <description>Contact controlling picklist field API name</description>
        <label>Controlling Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Dependent_Field__c</fullName>
        <description>Contact dependent picklist field API name</description>
        <label>Dependent Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__User_control_field__c</fullName>
        <description>Selected value of the controlling picklist can be configured based on User Country or Brand</description>
        <label>User control field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                    <default>true</default>
                    <label>Country</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Advanced Search Picklists Config</label>
    <pluralLabel>Advanced Search Picklists Configs</pluralLabel>
</CustomObject>